test/e2e/testdata/load_balacing_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-backend
  namespace: gateway-conformance-infra
spec:
  selector:
    app: lb-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-backend
  namespace: gateway-conformance-infra
  labels:
    app: lb-backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: lb-backend
  template:
    metadata:
      labels:
        app: lb-backend
    spec:
      containers:
        - name: backend
          image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: lb-backend
          resources:
            requests:
              cpu: 10m
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: round-lb-backend
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lb-backend
          port: 8080
